some minor adjustments

--- a/fullPaperVLDB2018/diversity.tex
+++ b/fullPaperVLDB2018/diversity.tex
@@ -21,7 +21,9 @@ The property called "Average Rating of Mexican Food" has a score range of [0,1].
 
 \paragraph*{Domain-Relevant Properties} 
 In many cases, the importance of certain properties is tightly linked with a specific application. For instance, a French bistro restaurant owner seeking opinions regarding a new menu would give much more consideration to opinions of those who are fond of European cuisines. He could also decide to completely ignore people that never visited a French restaurant before. Notably, the diversity the user is aiming for is subject to the specific application rather than a general notion.
-To capture domain related nuances we introduce a comprehensible \emph{explanations} and \emph{customizations} mechanisms. By allowing the user to better understand why a specific subset of opinions were chosen by our algorithm, we expect him to be competent to fine-tune the selection to a specific domain using designated customization tools.
+To capture domain related nuances we introduce a comprehensible \emph{explanations} and \emph{customizations} mechanisms. By allowing the user to better understand why a specific subset of opinions were chosen by our algorithm, we expect him to be competent to fine-tune the selection to a specific domain using designated customization tools.\\
+
+In the next section we thoroughly discuss the notion of \emph{Coverage-based Diversity}, which takes into account the aforementioned challenges. 
 
 
 % There are two key challenges here: (a) formally defining an adequate
